fix(workflow): 修复上游同步工作流中的分支检测问题
- 添加了分支检测的备用逻辑，当无法确定当前分支时默认使用 main 分支
- 增加了当前分支名称的输出日志便于调试
- 确保在同步前正确切换到目标分支
- 在同步步骤中也添加了相同的分支检测和日志输出逻辑

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -68,7 +68,11 @@ jobs:
       - name: Check for upstream changes
         id: check_changes
         run: |
-          CURRENT_BRANCH=$(git branch --show-current)
+          # Get current branch, falling back to main if not on a branch
+          CURRENT_BRANCH=$(git branch --show-current 2>/dev/null || echo "main")
+          echo "Current branch: $CURRENT_BRANCH"
+          
+          # Make sure we're on the right branch
           git checkout $CURRENT_BRANCH
           
           # Compare current HEAD with upstream to see if there are changes
@@ -85,7 +89,8 @@ jobs:
       - name: Sync with upstream
         if: steps.check_changes.outputs.has_changes == 'true'
         run: |
-          CURRENT_BRANCH=$(git branch --show-current)
+          CURRENT_BRANCH=$(git branch --show-current 2>/dev/null || echo "main")
+          echo "Current branch: $CURRENT_BRANCH"
           git checkout $CURRENT_BRANCH
           git merge upstream/$UPSTREAM_BRANCH
           echo "Successfully merged upstream changes"
