--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -75,14 +75,16 @@ jobs:
           # Make sure we're on the right branch
           git checkout $CURRENT_BRANCH
           
+          # Fetch upstream changes to ensure we have the latest
+          git fetch upstream $UPSTREAM_BRANCH
+          
           # Compare current HEAD with upstream to see if there are changes
-          git diff --quiet HEAD upstream/$UPSTREAM_BRANCH 2>/dev/null
-          if [ $? -eq 1 ]; then
-            echo "Changes detected in upstream repository"
-            echo "has_changes=true" >> $GITHUB_OUTPUT
-          else
+          if git diff --quiet HEAD upstream/$UPSTREAM_BRANCH 2>/dev/null; then
             echo "No changes in upstream repository"
             echo "has_changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "Changes detected in upstream repository"
+            echo "has_changes=true" >> $GITHUB_OUTPUT
           fi
 
       # Sync with upstream only if there are changes
@@ -92,6 +94,10 @@ jobs:
           CURRENT_BRANCH=$(git branch --show-current 2>/dev/null || echo "main")
           echo "Current branch: $CURRENT_BRANCH"
           git checkout $CURRENT_BRANCH
+          
+          # Ensure we have the latest upstream changes
+          git fetch upstream $UPSTREAM_BRANCH
+          
           git merge upstream/$UPSTREAM_BRANCH
           echo "Successfully merged upstream changes"
           
