feat(docker): 为 playwright 和 rebrowser-playwright 安装 Chromium Headless Shell
- 在 Dockerfile 中添加 rebrowser-playwright 的 Chromium 安装命令
- 添加 .playwright-chromium-installed 标记文件的复制步骤
- 更新注释以反映对两个工具的支持

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,8 +22,10 @@ RUN rm -rf node_modules \
     && npm ci --omit=dev --ignore-scripts \
     && npm cache clean --force
 
-# Install Chromium Headless Shell, and cleanup
+# Install Chromium Headless Shell for both playwright and rebrowser-playwright, and cleanup
 RUN npx playwright install --with-deps --only-shell chromium \
+    && npx rebrowser-playwright install --with-deps --only-shell chromium \
+    && touch .playwright-chromium-installed \
     && rm -rf /root/.cache /tmp/* /var/tmp/*
 
 ###############################################################################
@@ -78,6 +80,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY --from=builder /usr/src/microsoft-rewards-bot/dist ./dist
 COPY --from=builder /usr/src/microsoft-rewards-bot/package*.json ./
 COPY --from=builder /usr/src/microsoft-rewards-bot/node_modules ./node_modules
+COPY --from=builder /usr/src/microsoft-rewards-bot/.playwright-chromium-installed ./.playwright-chromium-installed
 
 # Copy runtime scripts with proper permissions and normalize line endings for non-Unix users
 # IMPROVED: Scripts now organized in docker/ folder
