--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -165,6 +165,12 @@ jobs:
       # Trigger build workflow if there are changes
       - name: Trigger build workflow
         if: steps.local_changes.outputs.has_local_changes == 'true'
-        run: |
-          # This will trigger the build workflow which checks for changes
-          echo "Triggering build workflow due to upstream changes"
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'build-docker.yml',
+              ref: '${{ github.ref }}'
+            })
